# gcp-vm-control

./: Dockerfile  README.md  docker-compose.yml  hello.py  main.py  pyproject.toml
API/: main.py
api/: main.py  notification.py  schema.py
backend/: Dockerfile  database.db  pyproject.toml
backend/api/: main.py  notification.py  schema.py  utils.py
backend/core/: enums.py  gcloud.py
core/: gcloud.py  models.py
frontend/: Dockerfile  app.py  pyproject.toml
